chore: cleanup de imports y código redundante
- Remover import no usado en invoice/WebConfigurer.java (org.springframework.boot.web.server)
- Remover declaración de clase User duplicada en store/User.java
- Validar compilación exitosa en todos los módulos (store, invoice, notification)